<resources>
    <string name="app_name">ORunningPlus</string>
    <string name="server_contextText">Connection service established successfully</string>
    <string name="server_contextTitle">Context Title</string>
    <string name="device_state_success">Connection Success</string>
    <string name="device_state_not_conn">Not Connected</string>
    <string name="device_state_failed">Connection Failed</string>
    <string name="device_state_connectionning">Connectionning …</string>
    //title string
    <string name="title_current_device">Current device</string>
    <string name="main_home">Home</string>
    <string name="main_today">Today</string>
    <string name="main_sport">Sport</string>
    <string name="main_health">Health</string>
    <string name="main_profile">Profile</string>
    <string name="main_history">History</string>
    <string name="main_devices">Devices</string>
    <string name="main_clock_face">ClockFace</string>

    <string name="main_settings">Settings</string>
    <string name="settings_conn">Connect Smart Watch</string>
    <string name="settings_find">Find Me</string>
    <string name="settings_12Hour">Use 12-hour Format</string>
    <string name="settings_notifi">Notification</string>
    <string name="settings_camera">Camera</string>
    <string name="settings_googlefit">Connect to Google Fit</string>
    <string name="settings_weather">Weather</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="settings_stability">App Stability Settings</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_firmware">Firmware Update</string>

    <string name="settings_alarm">Alarm</string>
    <string name="settings_sedentary">Sedentary Reminder</string>
    <string name="settings_drinking">Drinking Reminder</string>
    <string name="settings_disturb">Don\'t Disturb</string>
    <string name="settings_wake_up">Smart Wake Up</string>

    <string name="today_steps">STEPS</string>


    <string name="today_bpm_capital">BPM</string>
    <string name="today_bpm_lower">bpm</string>
    <string name="today_bpm_oneup">Bpm</string>
    <string name="today_last_hr">Last HR</string>
    <string name="today_warm_up">Warm Up</string>
    <string name="today_total_sleep">TOTAL SLEEP</string>
    <string name="today_goal">GOAL</string>
    <string name="today_avg">AVG</string>
    <string name="sleep_bed_time">Bed Time</string>
    <string name="sleep_wake_time">Wake Time</string>
    <string name="sleep_light_sleep">Light Sleep</string>
    <string name="sleep_deep_sleep">Deep Sleep</string>

    <string name="sport_unit_min">min</string>
    <string name="sport_unit_kcal">kcal</string>
    <string name="sport_unit_line_km">/km</string>
    <string name="sport_unit_km">km</string>
    <string name="sport_unit_cm">cm</string>
    <string name="sport_unit_step_min">step/min</string>

    <string name="profile_name">Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_heightr">Height</string>
    <string name="profile_bloodr">Blood Pressure</string>
    <string name="profile_goals">Goals</string>
    <string name="profile_unit">Unit</string>
    <string name="profile_them">Them</string>
    <string name="profile_policyr">privacy Policy</string>
    <string name="profile_feedback">FeedBack</string>
    <string name="profile_about">About</string>

    <string name="profile_male">Male</string>
    <string name="profile_female">FeMale</string>


    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>


    <string name="profile_unknown">Unknown</string>

    <string name="profile_date_pick">Date Pick</string>

    <string name="today_manage">Manage Cards</string>

    <string name="manage_pedpmeter">Pedpmeter</string>
    <string name="manage_hr">Heart Rate</string>
    <string name="manage_sleep">Sleep</string>

    <string name="hr_max">Maxmum</string>
    <string name="hr_min">Minmum</string>
    <string name="hr_avg">Average</string>


    <string name="hr_max_week">Week Max</string>
    <string name="hr_min_week">Week Mini</string>
    <string name="hr_max_month">Month Max</string>
    <string name="hr_min_month">Month Mini</string>
    <string-array name="candler_week_arr">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string name="reminders_repeat_mon">M</string>
    <string name="reminders_repeat_tue">T</string>
    <string name="reminders_repeat_wed">W</string>
    <string name="reminders_repeat_thu">T</string>
    <string name="reminders_repeat_fri">F</string>
    <string name="reminders_repeat_sat">S</string>
    <string name="reminders_repeat_sun">S</string>

    <string-array name="date_week_arr">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="date_month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="top_bar_arr">
        <item>Today</item>
        <item>Week</item>
        <item>Month</item>

    </string-array>

    <string-array name="top_bar_arr_all">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>All</item>
    </string-array>

    <string-array name="sport_details_top_bar">
        <item>Map</item>
        <item>Overview</item>
        <item>Chart</item>
    </string-array>

    <string-array name="candler_month_arr">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="unit_arr">
        <item>cm</item>
        <item>ft in</item>
    </string-array>

    <string-array name="unit_weight_arr">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string name="unit_bp">mmHg</string>


    <string-array name="gender_arr">
        <item>Male</item>
        <item>FeMale</item>
    </string-array>




    <string name="sport_total_distance">Total DisTance</string>
    <string name="sport_total_times">Total (Times)</string>
    <string name="sport_total_time">Total Time</string>
    <string name="sport_total_days">Total (Days)</string>
    <string name="sport_total">Total</string>
    <string name="sport_total_calories">Calories (Kcal)</string>
    <string name="sport_total_hours">Total (Hours)</string>
    <string name="sport_avg_pace">Avg Pace</string>
    <string name="sport_dail_goal">DAIL GOAL</string>
    <string name="today_str_share">Share</string>

    <string name="sport_detail_calories">Calories</string>
    <string name="sport_detail_step_lenth">Step length</string>

    <string name="sport_detail_avg_cadence">Avg Cadence</string>


    <string name="sport_type_all">All</string>
    <string name="sport_type_run">Running</string>
    <string name="sport_type_walk">Walking</string>
    <string name="sport_type_runindoor">Run Indoor</string>
    <string name="sport_type_cycing">Cycing</string>
    <string name="sport_type_swim">Swimming</string>
    <string name="sport_type_hiking">Hiking</string>


    <string name="today_total_step">Total Steps</string>
    <string name="select_future_date">Unable to select future date</string>

    <string name="sport_chart_pace">PACE</string>
    <string name="sport_chart_hr">HEART RATE</string>
    <string name="sport_chart_hr_unit">BPM</string>
    <string name="sport_chart_hr_zone">HEART RATE ZONE</string>
    <string name="sport_chart_pace_unit">(MIN/KM)</string>
    <string name="sport_chart_pace_avg">Average:</string>
    <string name="sport_chart_pace_fast">Fastest:</string>
    <string name="sport_chart_km_pace">km pace</string>
    <string name="sport_chart_time">Time</string>
    <string name="user_info_name">Modify name</string>

    <string name="user_info_old_name">Old NickName :</string>
    <string name="user_info_chage_message">Our nickname cannot be longer than 10 characters!</string>

    <string name="device_select_gps">Gps Watch/Bracelet</string>
    <string name="device_select_round">Smart Watch Round</string>
    <string name="device_select_square">Smart Watch Square</string>
    <string name="device_select_bracelet">Smart Bracelet</string>
    <string name="device_select_ecg">ECG Watch</string>

    <string name="notification_title">Notification of usage rights</string>
    <string name="notification_message">Please turn on notification usage rights to ensure that you can receive notification messages on your device.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
